--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,6 +27,16 @@ jobs:
     - name: Install backend dependencies
       run: npm ci
     
+    - name: Run backend tests
+      run: npm test -- --coverage --maxWorkers=2
+    
+    - name: Upload coverage
+      if: matrix.node-version == '20.x'
+      uses: codecov/codecov-action@v3
+      with:
+        files: ./coverage/lcov.info
+        fail_ci_if_error: false
+    
     - name: Install frontend dependencies
       run: cd client && npm install
     
