--- a/package.json
+++ b/package.json
@@ -11,38 +11,32 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
-  "keywords": ["amocrm", "monitoring", "health-check", "dashboard"],
+  "keywords": [
+    "amocrm",
+    "monitoring",
+    "health-check",
+    "dashboard"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.2",
-    "sqlite3": "^5.1.6",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "node-cron": "^3.0.3",
-    "luxon": "^3.4.4",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "prom-client": "^15.1.0"
+    "helmet": "^8.1.0",
+    "luxon": "^3.4.4",
+    "node-cron": "^3.0.3",
+    "prom-client": "^15.1.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
+    "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.11"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coverageDirectory": "coverage",
-    "collectCoverageFrom": [
-      "server/**/*.js",
-      "!server/**/__tests__/**",
-      "!server/index.js"
-    ],
-    "testMatch": [
-      "**/__tests__/**/*.test.js"
-    ]
+    "nodemon": "^3.0.2",
+    "supertest": "^7.1.4"
   }
 }
-
